# Algorithms_2023

./: Bshell.txt  CMakeLists.txt  Def.cpp  Def.h  README.md  main.cpp
134/: BiTNode.cpp  BiTNode.h  Test134.cpp  Test134.h  TreeNode.cpp  TreeNode.h
134/05/: x05.cpp  x05.h
149/: Test149.cpp  Test149.h
149/03/: x03.cpp  x03.h
18/: Sqlist.h  Test18.cpp  Test18.h
18/01/: x01.cpp  x01.h
18/02/: x02.cpp  x02.h
18/03/: x03.cpp  x03.h
18/04/: x04.cpp  x04.h
18/05/: x05.cpp  x05.h
18/06/: x06.cpp  x06.h
18/07/: x07.cpp  x07.h
18/08/: x08.cpp  x08.h
18/09/: x09.cpp  x09.h
18/10/: x10.cpp  x10.h
18/11/: x11.cpp  x11.h
18/12/: x12.cpp  x12.h
18/13/: x13.cpp  x13.h
18/14/: x14.cpp  x14.h
40/: LinkList.cpp  LinkList.h  Test40.cpp  Test40.h
40/01/: x01.cpp  x01.h
40/02/: x02.cpp  x02.h
40/03/: x03.cpp  x03.h
40/04/: x04.cpp  x04.h
40/05/: x05.cpp  x05.h
40/06/: 06.cpp  06.h  x06.cpp  x06.h
40/07/: x07.cpp  x07.h
40/08/: x08.cpp  x08.h
40/09/: x09.cpp  x09.h
40/10/: x10.cpp  x10.h
40/11/: x11.cpp  x11.h
40/12/: x12.cpp  x12.h
40/13/: x13.cpp  x13.h
40/14/: x14.cpp  x14.h
40/15/: x15.cpp  x15.h
40/16/: x16.cpp  x16.h
40/17/: x17.cpp  x17.h
40/18/: x18.cpp  x18.h
40/19/: x19.cpp  x19.h
40/20/: x20.cpp  x20.h
40/21/: x21.cpp  x21.h
40/22/: x22.cpp  x22.h
40/23/: x23.cpp  x23.h
40/24/: x24.cpp  x24.h
40/25/: x25.cpp  x25.h
70/: Stack.cpp  Stack.h  Test70.cpp  Test70.h
70/03/: x03.cpp  x03.h
70/04/: x04.cpp  x04.h
70/05/: x05.cpp  x05.h
85/: Queue.cpp  Queue.h  Test85.cpp  Test85.h
(+15 files in other folders)
