cmake_minimum_required(VERSION 3.17)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithms main.cpp 18/01/x01.cpp 18/01/x01.h 18/Test18.cpp 18/Test18.h 18/02/x02.cpp 18/02/x02.h Def.cpp Def.h 18/Sqlist.h 18/03/x03.cpp 18/03/x03.h 18/04/x04.cpp 18/04/x04.h 18/05/x05.cpp 18/05/x05.h 18/06/x06.cpp 18/06/x06.h 18/07/x07.cpp 18/07/x07.h 18/08/x08.cpp 18/08/x08.h 18/09/x09.cpp 18/09/x09.h 18/10/x10.cpp 18/10/x10.h 18/11/x11.cpp 18/11/x11.h 18/12/x12.cpp 18/12/x12.h 18/13/x13.cpp 18/13/x13.h 18/14/x14.cpp 18/14/x14.h 40/LinkList.cpp 40/LinkList.h 40/01/x01.cpp 40/01/x01.h 40/02/x02.cpp 40/02/x02.h 40/Test40.cpp 40/Test40.h)